<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">DDR Finder</string>
    <string name="GOOGLE_MAPS_API_KEY" translatable="false">AIzaSyB3sJh_gDF9uv968z6_VTb6_FZmuv_q1Qk</string>
    <string name="GOOGLE_PLACES_API_KEY" translatable="false">AIzaSyA4VN5_0WtEHdG9Gsp_yFDMva8fGpMdImQ</string>

    <string name="action_reload">Reload</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_my_location">My location</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_ddr_calc">Open DDR Calc</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="error_zoom">Zoom in to load more locations</string>
    <string name="error_api">Error loading data</string>
    <string name="location_actions_navigate">Navigate</string>
    <string name="location_actions_info">More information</string>
    <string name="location_actions_copy">Copy GPS coordinates</string>
    <string name="browser_actions_copy">Copy link</string>
    <string name="copy_complete">Copied</string>
    <string name="error_perm_loc">Enable location permission in settings to detect current location</string>
    <string name="error_api_ver">API level requested is not supported by this server</string>
    <string name="error_datasrc">Server did not recognize the data source(s) requested</string>
    <string name="error_api_unexpected">Unexpected connection error</string>
    <string name="area_no_results">No arcades found in this area</string>
    <string name="action_launch_web">This app version will no longer be updated.\nTap here to try out the new Web UI</string>

    <!-- EOL dialog -->
    <string name="eol_title">App Discontinued</string>
    <string name="eol_text">This version of the app has been discontinued.\nTap OK to launch the new Web App</string>
    <string name="eol_ok">OK</string>

    <!-- Arcade location info sheet -->
    <string name="distance_km">≈ %1$s km</string>
    <string name="coordinates" translatable="false">%1$s°, %2$s°</string>
    <string name="has_ddr" translatable="false">DDR️</string>
    <string name="has_ddr_yes">Yes</string>
    <string name="has_ddr_no">No</string>

    <!-- Preferences -->
    <string name="settings_src">Data Source</string>
    <string-array name="settings_src_entries">
        <item>Zenius -I- vanisher.com (Worldwide)</item>
        <item>DDR-Navi (Japan)</item>
        <item>OpenStreetMap (Worldwide)</item>
    </string-array>
    <string-array name="settings_src_entryValues" translatable="false">
        <item>ziv</item>
        <item>navi</item>
        <item>osm</item>
    </string-array>
    <string name="settings_src_default" translatable="false">ziv</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_category_map">Map</string>
    <string name="settings_category_app">App</string>
    <string name="settings_category_help">Help</string>
    <string name="settings_analytics">Analytics</string>
    <string name="settings_analytics_summary">Share anonymous usage statistics to help improve the app</string>
    <string name="settings_location">Enable Current Location</string>
    <string name="settings_location_dialog_message">To enable current location, tap Settings, then Permissions, then turn on the \"Your Location\" switch</string>
    <string name="settings_location_dialog_positive">Settings</string>
    <string name="settings_location_dialog_negative">Cancel</string>
    <string name="settings_custom_tabs">Open web pages in app</string>
    <string name="settings_custom_tabs_partial_height">Open more info pages as pop-up</string>
    <string name="error_opening_browser">Could not open browser</string>
    <string name="settings_filter">Filter</string>
    <string name="settings_filter_ddr_only">Only show arcades that have DDR</string>
    <string name="settings_theme">Theme</string>
    <string-array name="settings_theme_entries">
        <item>Follow device theme</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="settings_theme_entryValues" translatable="false">
        <item>auto</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="settings_theme_default" translatable="false">auto</string>
    <string name="settings_locale">Language / 言語</string>
    <string-array name="settings_locale_entries">
        <item>System default</item>
        <item>English</item>
        <item>Español</item>
        <item>日本語</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>
    <string-array name="settings_locale_entryValues" translatable="false">
        <item>auto</item>
        <item>en</item>
        <item>es</item>
        <item>ja</item>
        <item>zh-Hans</item>
        <item>zh-Hant</item>
    </string-array>
    <string name="settings_locale_default" translatable="false">auto</string>
</resources>